# cell_sim2

./: .gitignore  Cargo.toml  build_for_wasm.sh  perf.sh
.cargo/: config.toml
cell_sim/: Cargo.toml
cell_sim/benches/: physics.rs
cell_sim/src/: lib.rs
cell_sim/src/cell/: chemicals.rs  inner.rs  membrane.rs  mod.rs
cell_sim/src/cell/component/: chlorophyll.rs  flangella.rs  glycolysis.rs  mod.rs  nucleotide_de_novo.rs  protein_de_novo.rs  test_comp.rs
cell_sim/src/cell/genetics/: mod.rs
cell_sim/src/component/: carbs_reducer.rs  chlorophyll.rs  glycolysis.rs  mod.rs  protein_de_novo.rs  test_comp.rs
cell_sim/src/genetics/: rna.rs
cell_sim/src/physics/: cell_wrapper.rs  mod.rs  physics_props.rs  updates.rs  world.rs
game/: Cargo.toml
game/src/: cell_bundle.rs  cell_wrapper.rs  ctl.rs  main.rs  scene.rs  update.rs  world_wrapper.rs
