cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "cell_sim",
    "game",
]

[profile.dev]
opt-level = 1
debug = 2
rustflags = ["-C", "target-cpu=native"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.wasm]
inherits = "release"
snip = true
panic = "abort"
opt-level = "z"

[profile.wasm.package."*"]
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
debug = 1

