[package]
name = "cell_sim"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "physics"
harness = false

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
# rapier2d parellel does not play well with a lot of cells (index out of bounds in interaction_groups).
# Benchmarks show that in whatever case parallel is not faster than sequential. With large number of cells,
# it hangs on pretty massive theading overhead.
rapier2d = { version = "0.17.2", features = ["simd-stable"] }
