[package]
name = "cell_sim"
version = "0.1.0"
edition = "2021"

[features]
parallel = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "physics"
harness = false

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = "0.32.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rapier2d = { version = "0.17.2", features = ["simd-stable"] }
rayon = "1.8.0"
