cargo-features = ["profile-rustflags"]

[package]
name = "game"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
rustflags = ["-C", "target-cpu=native"]

[profile.dev]
opt-level = 1
debug = 2

[profile.dev.package."*"]
opt-level = 3
debug = 1

[dependencies]
cell_sim = { path = "../cell_sim" }
bevy = { version = "0.12.1", default-features = false, features = ["multi-threaded", "bevy_render", "bevy_core_pipeline", "bevy_gizmos", "bevy_sprite", "x11"] }
rand = "0.8.5"
nalgebra = "0.32.3"
bevy-fps-counter = "0.3.0"

