[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
cell_sim = { path = "../cell_sim" }
bevy = { version = "0.12.1", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_winit", "bevy_sprite", "x11"] }
rand = "0.8.5"
nalgebra = "0.32.3"
bevy-fps-counter = "0.3.0"
